--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
     "test:e2e": "wdio run wdio.conf.ts",
+    "test:e2e:verbose": "cross-env VERBOSE=1 wdio run wdio.conf.ts",
     "test:e2e:dev": "cross-env WSL_MOCK=1 wdio run wdio.conf.ts",
     "test:e2e:spec": "cross-env WSL_MOCK=1 wdio run wdio.conf.ts --spec",
     "screenshots": "cross-env WSL_MOCK=1 wdio run wdio.conf.ts --spec src/test/e2e/specs/screenshots.spec.ts",
