--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -27,6 +27,13 @@ jobs:
     needs: release-please
     if: ${{ needs.release-please.outputs.release_created }}
     runs-on: windows-latest
+    strategy:
+      matrix:
+        include:
+          - target: x86_64-pc-windows-msvc
+            arch: x64
+          - target: aarch64-pc-windows-msvc
+            arch: arm64
 
     steps:
       - name: Checkout repository
@@ -40,6 +47,8 @@ jobs:
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: ${{ matrix.target }}
 
       - name: Rust cache
         uses: Swatinem/rust-cache@v2
@@ -48,6 +57,7 @@ jobs:
             src-tauri
             crates/wsl-core
           cache-on-failure: true
+          key: ${{ matrix.target }}
 
       - name: Install npm dependencies
         run: npm ci
@@ -70,7 +80,7 @@ jobs:
           releaseDraft: false
           prerelease: false
           includeDebug: false
-          args: --target x86_64-pc-windows-msvc
+          args: --target ${{ matrix.target }}
 
       - name: Generate store icons
         shell: pwsh
@@ -102,14 +112,14 @@ jobs:
       - name: Build MSIX package
         shell: pwsh
         run: |
-          .\scripts\build-msix.ps1 -Version "${{ steps.msix-version.outputs.msix_version }}"
+          .\scripts\build-msix.ps1 -Version "${{ steps.msix-version.outputs.msix_version }}" -Architecture "${{ matrix.arch }}"
 
       - name: Prepare portable exe
         shell: pwsh
         run: |
           $version = "${{ steps.msix-version.outputs.msix_version }}".Split('.')[0..2] -join '.'
-          $src = "src-tauri/target/x86_64-pc-windows-msvc/release/wsl-ui.exe"
-          $dst = "dist/WSL.UI_${version}_x64_portable.exe"
+          $src = "src-tauri/target/${{ matrix.target }}/release/wsl-ui.exe"
+          $dst = "dist/WSL.UI_${version}_${{ matrix.arch }}_portable.exe"
           Copy-Item $src $dst
           Write-Host "Created portable exe: $dst"
 
