--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,13 @@ env:
 jobs:
   build-windows:
     runs-on: windows-latest
+    strategy:
+      matrix:
+        include:
+          - target: x86_64-pc-windows-msvc
+            arch: x64
+          - target: aarch64-pc-windows-msvc
+            arch: arm64
 
     steps:
       - name: Checkout repository
@@ -30,6 +37,8 @@ jobs:
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: ${{ matrix.target }}
 
       - name: Rust cache
         uses: Swatinem/rust-cache@v2
@@ -38,6 +47,7 @@ jobs:
             src-tauri
             crates/wsl-core
           cache-on-failure: true
+          key: ${{ matrix.target }}
 
       - name: Install npm dependencies
         run: npm ci
@@ -60,7 +70,7 @@ jobs:
           releaseDraft: false
           prerelease: false
           includeDebug: false
-          args: --target x86_64-pc-windows-msvc
+          args: --target ${{ matrix.target }}
 
       - name: Generate store icons
         shell: pwsh
@@ -85,10 +95,21 @@ jobs:
       - name: Build MSIX package
         shell: pwsh
         run: |
-          .\scripts\build-msix.ps1 -Version "${{ steps.msix-version.outputs.msix_version }}"
+          .\scripts\build-msix.ps1 -Version "${{ steps.msix-version.outputs.msix_version }}" -Architecture "${{ matrix.arch }}"
 
-      - name: Upload MSIX to release
+      - name: Prepare portable exe
+        shell: pwsh
+        run: |
+          $version = "${{ steps.msix-version.outputs.msix_version }}".Split('.')[0..2] -join '.'
+          $src = "src-tauri/target/${{ matrix.target }}/release/wsl-ui.exe"
+          $dst = "dist/WSL.UI_${version}_${{ matrix.arch }}_portable.exe"
+          Copy-Item $src $dst
+          Write-Host "Created portable exe: $dst"
+
+      - name: Upload MSIX and portable exe to release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ inputs.tag }}
-          files: dist/*.msix
+          files: |
+            dist/*.msix
+            dist/*_portable.exe
