--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "tauri:build:quick": "tauri build --bundles"
   },
   "dependencies": {
+    "@aptabase/web": "^0.4.3",
     "@tauri-apps/api": "^2.9.1",
     "@tauri-apps/plugin-dialog": "^2.4.2",
     "@tauri-apps/plugin-fs": "^2.4.4",
