--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "test:e2e:verbose": "cross-env VERBOSE=1 wdio run wdio.conf.ts",
     "test:e2e:dev": "cross-env WSL_MOCK=1 wdio run wdio.conf.ts",
     "test:e2e:spec": "cross-env WSL_MOCK=1 wdio run wdio.conf.ts --spec",
-    "screenshots": "cross-env WSL_MOCK=1 wdio run wdio.conf.ts --spec src/test/e2e/specs/screenshots.spec.ts",
-    "screenshots:store": "cross-env WSL_MOCK=1 SCREENSHOT_WIDTH=1920 SCREENSHOT_HEIGHT=1080 wdio run wdio.conf.ts --spec src/test/e2e/specs/screenshots.spec.ts",
-    "demo": "cross-env WSL_MOCK=1 RECORD_VIDEO=1 wdio run wdio.conf.ts --spec src/test/e2e/specs/demo.spec.ts",
-    "demo:hd": "cross-env WSL_MOCK=1 RECORD_VIDEO=1 DEMO_WIDTH=1920 DEMO_HEIGHT=1080 wdio run wdio.conf.ts --spec src/test/e2e/specs/demo.spec.ts",
-    "demo:slow": "cross-env WSL_MOCK=1 DEMO_WIDTH=1280 DEMO_HEIGHT=1024 RECORD_VIDEO=1 VIDEO_SPEED=1 wdio run wdio.conf.ts --spec src/test/e2e/specs/demo.spec.ts",
+    "screenshots": "cross-env WSL_MOCK=1 INCLUDE_ALL_SPECS=1 wdio run wdio.conf.ts --spec src/test/e2e/specs/screenshots.spec.ts",
+    "screenshots:store": "cross-env WSL_MOCK=1 INCLUDE_ALL_SPECS=1 SCREENSHOT_WIDTH=1920 SCREENSHOT_HEIGHT=1080 wdio run wdio.conf.ts --spec src/test/e2e/specs/screenshots.spec.ts",
+    "demo": "cross-env WSL_MOCK=1 INCLUDE_ALL_SPECS=1 RECORD_VIDEO=1 wdio run wdio.conf.ts --spec src/test/e2e/specs/demo.spec.ts",
+    "demo:hd": "cross-env WSL_MOCK=1 INCLUDE_ALL_SPECS=1 RECORD_VIDEO=1 DEMO_WIDTH=1920 DEMO_HEIGHT=1080 wdio run wdio.conf.ts --spec src/test/e2e/specs/demo.spec.ts",
+    "demo:slow": "cross-env WSL_MOCK=1 INCLUDE_ALL_SPECS=1 DEMO_WIDTH=1280 DEMO_HEIGHT=720 RECORD_VIDEO=1 VIDEO_SPEED=1 wdio run wdio.conf.ts --spec src/test/e2e/specs/demo.spec.ts",
     "tauri:build": "tauri build",
     "tauri:build:debug": "tauri build --debug --no-bundle",
     "tauri:build:debugBundles": "tauri build --debug",
